@@ -5,7 +5,8 @@
           чтобы избежать возможной (но маловероятной) неправильной работы
           в многопоточных приложениях.
         * Новый код коррекции экспозиции, основанный на комбинации линейной 
-          функции и кубического корня
+          функции и кубического корня. Рабочий диапазон коррекции теперь 
+          от 0.25 (-2 стопа) до 8 (+3 стопа).
         * LibRaw 0.13.0-Beta2
 
 2011-01-10 Alex Tutubalin <lexa@lexa.ru>
