@@ -670,8 +670,8 @@ changes the output size.
         <br/>
         <ul>
           <li>exp_correc: positive value turns the feature on (default: off).</li>
-          <li>exp_shift: exposure shift in linear scale. Usable range from 0.5 (1-stop darken) to
-            3.0 (1.5-stop lighter). Default: 1.0 (no exposure shift).</li>
+          <li>exp_shift: exposure shift in linear scale. Usable range from 0.25 (2-stop darken) to
+            8.0 (3-stop lighter). Default: 1.0 (no exposure shift).</li>
           <li>exp_preser: preserve highlights when lighten the image. Usable range from 0.0 (no preservation) to 1.0
             (full preservation). 0.0 is the default value.
       </dd>
@@ -1165,7 +1165,7 @@ data source is recorded. The possible values are listed below.
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 14:42:41 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Mon Jan 10 18:37:39 MSK 2011
+Last modified: Thu Jan 13 19:47:10 MSK 2011
 <!-- hhmts end -->
   </body>
 </html>
