@@ -707,8 +707,8 @@
         <br/>
         <ul>
           <li>exp_correc: положительное значение включает экспокоррекцию (умолчание: выключено).</li>
-          <li>exp_shift: экспозиционный сдвиг в линейной шкале. Нормально обрабатываются значения от 0.5 (затемнение
-            на 1 ступень экспозиции) до 3.0 (осветление примерно на 1.5 ступени). Умолчание: 1.0 (нет экспокоррекции).</li>
+          <li>exp_shift: экспозиционный сдвиг в линейной шкале. Нормально обрабатываются значения от 0.25 (затемнение
+            на 2 ступени экспозиции) до 8.0 (осветление на 3 ступени). Умолчание: 1.0 (нет экспокоррекции).</li>
           <li>exp_preser: степень сохранения деталей в светах при осветлении изображения. Диапазон значений от 0.0
             (линейный сдвиг экспозиции с вылетом светов) до 1.0 (максимальное сохранение деталей в светах). Умолчание:
             0.0.
@@ -1213,7 +1213,7 @@ protected:
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 14:42:41 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Mon Jan 10 18:37:27 MSK 2011
+Last modified: Thu Jan 13 19:47:43 MSK 2011
 <!-- hhmts end -->
   </body>
 </html>
